--- a/app/views/group/view.html.erb
+++ b/app/views/group/view.html.erb
@@ -27,11 +27,11 @@
                                             <% else %>
                                                 <td><%= user.score.round(4) %></td>
                                             <% end %>
-                                            <% if user.lastActivity == nil %>
+                                            <% if user.lastActivity(@group.id) == nil %>
                                                 <td id="1e100000"><%= user.full_name %> has not yet participated.</td>
                                             <% else %>
-                                                <%= content_tag :td, :id =>user.lastActivity.created_at do %>
-                                                    <%= user.lastActivity.name %> at <%= user.lastActivity.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %a, %m/%d/%y")%>
+                                                <%= content_tag :td, :id =>user.lastActivity(@group.id).created_at do %>
+                                                    <%= user.lastActivity(@group.id).name %> at <%= user.lastActivity(@group.id).created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %a, %m/%d/%y")%>
                                                 <% end %>
                                             <% end %>
                                         </tr>
@@ -48,8 +48,8 @@
                                             <% if user.lastActivity == nil %>
                                                 <td id="1e100000"><%= user.full_name %> has not yet participated.</td>
                                             <% else %>
-                                                <%= content_tag :td, :id =>user.lastActivity.created_at do %>
-                                                    <%= user.lastActivity.name %> at <%= user.lastActivity.created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %a, %m/%d/%y")%>
+                                                <%= content_tag :td, :id =>user.lastActivity(@group.id).created_at do %>
+                                                    <%= user.lastActivity(@group.id).name %> at <%= user.lastActivity(@group.id).created_at.in_time_zone("Central Time (US & Canada)").strftime("%H:%M on %a, %m/%d/%y")%>
                                                 <% end %>
                                             <% end %>
                                         </tr>
