--- a/app/views/group/edit.html.erb
+++ b/app/views/group/edit.html.erb
@@ -107,7 +107,7 @@
                     <div class="input-group">
                         <input type="text" class="form-control" id="messageInput">
                         <div class="input-group-append gradient-buttons">
-                            <button type="button" id="messageSubmit" class="btn btn-md btn-light" onclick="submitMessage()">Submit Message</button>
+                            <%= button_tag "Submit Message", :type => "button", :id => "messageSubmit", :class => "btn btn-md btn-light", :onclick => "submitMessage()" %>
                         </div>
                     </div>
                 </div>
